Source/WebKit2/UIProcess/API/efl/EWebKit2.h
@@ -31,5 +31,6 @@
 #include "ewk_intent.h"
 #include "ewk_intent_service.h"
 #include "ewk_view.h"
+#include "ewk_web_error.h"
 
 #endif // EWebKit2_h
