Source/WebKit2/PlatformEfl.cmake
@@ -36,6 +36,7 @@ LIST(APPEND WebKit2_SOURCES
     UIProcess/API/efl/ewk_intent_service.cpp
     UIProcess/API/efl/ewk_view.cpp
     UIProcess/API/efl/ewk_view_loader_client.cpp
+    UIProcess/API/efl/ewk_web_error.cpp
 
     UIProcess/cairo/BackingStoreCairo.cpp
 
